[*] 组织搜索方法